plugins {
    id 'com.github.johnrengelman.shadow' version '6.1.0'
    id 'java'
}

group = 'me.sizableshrimp.jsb'
version = '0.2.0'

sourceCompatibility = targetCompatibility = '15'

repositories {
    mavenCentral()
    maven {
        name "jitpack.io"
        url "https://jitpack.io"
    }
}

dependencies {
    // Core
    // implementation 'org.fastily:jwiki:2.0.0'
    implementation 'com.github.SizableShrimp:jwiki:4000e10a9e7b4f23961734e51b4cf1ccb8e4b548'
    implementation 'com.discord4j:discord4j-core:3.1.3'

    // Useful Libraries
    // implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'org.imgscalr:imgscalr-lib:4.2'
    implementation 'org.springframework.boot:spring-boot-starter:2.3.3.RELEASE'
    implementation 'org.reflections:reflections:0.9.12'
    // compileOnly 'org.projectlombok:lombok:1.18.16'
}

shadowJar.archiveFileName = 'DiscordBot.jar'
tasks.build.dependsOn shadowJar
compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

jar {
    manifest {
        attributes('Main-Class': 'me.sizableshrimp.jsb.Bot')
    }
}
